--- a/index.css
+++ b/index.css
@@ -131,7 +131,7 @@ header img {
   margin: 0 0 0 150px;
   font-size: 1em;
   border-radius: 10px;
-  color: #66666;
+  color: #666666;
   text-decoration: none;
   font-family: 'roboto', sans-serif;
 }
@@ -188,6 +188,20 @@ header img {
   margin: 70px auto;
 }
 
+footer {
+  width: 100vw;
+  height: 8vh;
+  background-color: #FFE68E;
+}
+
+footer p {
+  display: block;
+  width: 60vw;
+  margin: 0 auto;
+  padding: 15px;
+  text-align: center;
+  color: #000
+}
 
 
 /**Styling scrollable elements*/
