--- a/index.css
+++ b/index.css
@@ -190,7 +190,7 @@ header img {
 
 footer {
   width: 100vw;
-  height: 8vh;
+  height: auto;
   background-color: #FFE68E;
 }
 
@@ -201,6 +201,17 @@ footer p {
   padding: 15px;
   text-align: center;
   color: #000
+}
+
+footer ul {
+  width: 50vw;
+  text-align: center;
+  margin: 0 auto;
+}
+footer ul li{
+  list-style-type: none;
+  margin: 0 auto;
+  font-family: 'roboto', sans-serif;
 }
 
 
